test/files/neg/t2991/scam_2.scala

trait Scam {
  def f = new Jamb_1().k(42, true, false)
  def g = new Jamb_1().f(42, true, false)
}
